  saving the item. Since this was incorrectly set in the base configuration of Data 
  Crow it will now be adjusted (just once) for everyone; every field that is currently
  marked as 'required' will also gain the 'key' setting (see Settings > General Field
  Settings).
- Discogs.com service now also sets the composer for tracks & albums.
- References filter will now filter on contains instead of starting with.

[Fixed]
- Discogs.com service now handles sub tracks correctly.
- Corrected all incorrect base settings, for new installation.
- Cleanup; corrected the record label module and field references, internal names
  were incorrect. The database will be automatically updated.
- Sorting of values was not correct for the tree panels and for the auto numbering tool
  (for special characters).
- Server: user could not be edited (error + client got stuck).
- Server: children were not saved when creating a new item.
- Server: performance was impacted due to the fact that the whole user object was
  serialized for each permission entry.
- Server: loan module check for editing allowed was depending on the plugin being
  loaded. It should only have checked to see whether the permission was given as the
  server does not have access to the plugins themselves.
- Sorting was not correct when including reference fields (for special characters).
- Icons showing too large (unscaled) in the reference selection field.
- Descriptive setting not correctly applied for media, person and property items.

[To Do]
- Finish the synch server.
- Discogs.com; check title; set from details page
- Discogs.com; add artist search mode for albums
- Books, add: year of original issue & translators
- Online search for books: add translators
- Move help to online.
- Related Items; show items using the descriptive setting if possible.

-----------------------------------------------------------------------------------------