@@ -40,7 +40,9 @@ BoardGamesAtlas.com. On the Movie front a new online search has been added; Movi
   marked as 'required' will also gain the 'key' setting (see Settings > General Field
   Settings).
 - Discogs.com service now also sets the composer for tracks & albums.
-- References filter will now filter on contains instead of starting with.
+- References filter will now filter on contains instead of starting with, same for 
+  the field filter dialogs.
+- Small layout fixes for the loan administration panel
 
 [Fixed]
 - Discogs.com service now handles sub tracks correctly.
@@ -59,15 +61,20 @@ BoardGamesAtlas.com. On the Movie front a new online search has been added; Movi
 - Sorting was not correct when including reference fields (for special characters).
 - Icons showing too large (unscaled) in the reference selection field.
 - Descriptive setting not correctly applied for media, person and property items.
+- Fixed the layout in the toolbar, ugly line in front of Quick Search.
+- Help updates; reviewed all help files and remove incorrect references and incorrect
+  information.
+- Removed references to no longer existing parameters (-clearsettings and -nosplash).
 
 [To Do]
+- Move help to online.
 - Finish the synch server.
 - Discogs.com; check title; set from details page
 - Discogs.com; add artist search mode for albums
 - Books, add: year of original issue & translators
 - Online search for books: add translators
-- Move help to online.
 - Related Items; show items using the descriptive setting if possible.
+
 
 -----------------------------------------------------------------------------------------
 Data Crow version 4.7.0                                            Released on 2023-03-02
